Create array and attempt to filter out primes.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="container">
       <h1>Prime Sifting</h1>
-      <form id="fomr" action="index.html" method="post">
+      <form id="form" action="index.html" method="post">
         <div class="form-group">
           <label for=""></label>
-          <input type="text" class="form-control" name="" value="">
+          <input id="userInput"type="text" class="form-control" name="" value="">
         </div>
         <button type="submit" class="btn btn-secondary" name="button">Find Primes</button>
       </form>
